# GhostTeam

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  openapi.yaml  rustfmt.toml  schema.sql
.cargo/: config.toml
.ghostteam/: api_keys.yaml  config.yaml
.ghostteam/roles/: inspector.md  manager.md  worker.md
.ghostteam/teams/: default.yaml
.github/workflows/: release.yml
benches/: agent_bench.rs  db_bench.rs
dashboard/: dashboard.css  dashboard.js  index.html
docs/: release-gate.md  telegram-command-hub-phase1.md
scripts/: ghostos-bridge.py  ghostteam-tmux.sh  install.sh  uninstall.sh
sdk/rust/: agents.rs  ghostos.rs  messages.rs  mod.rs  tasks.rs
sdk/ts/: agents.ts  ghostos.ts  index.ts  messages.ts  tasks.ts
src/: agent.rs  cli.rs  db.rs  konnect.rs  logging.rs  main.rs  roles.rs  tasks.rs  telegram_bridge.rs
src/api/: auth.rs  server.rs
src/api/routes/: agents.rs  dashboard.rs  ghostos.rs  logs.rs  messages.rs  mod.rs  tasks.rs
src/model/: ghostos.rs  llamacpp.rs  mod.rs  ollama.rs
tests/: agent_tests.rs  api_tests.rs  db_tests.rs  e2e.rs  model_tests.rs  tasks_tests.rs  telegram_bridge_tests.rs
