[package]
name = "ghostteam"
version = "0.1.0"
edition = "2024"
authors = ["James D. Ingersoll"]
description = "GhostTeam by GodsIMiJ AI Solutions Inc."
license = "Apache-2.0"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-words = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "time"] }
tower = "0.5"
time = { version = "0.3", features = ["formatting"] }
tokio-tungstenite = "0.29"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
tokio-tungstenite = "0.29"

[[bench]]
name = "agent_bench"
harness = false

[[bench]]
name = "db_bench"
harness = false
